--- a/CameraTest.ui
+++ b/CameraTest.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>624</width>
+    <width>736</width>
     <height>487</height>
    </rect>
   </property>
@@ -27,6 +27,20 @@
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>停止线程</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnConfig1">
+       <property name="text">
+        <string>R配置</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnConfig2">
+       <property name="text">
+        <string>L配置</string>
        </property>
       </widget>
      </item>
